--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "tailwindcss": "^3.0.18"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
+    "build": "npm run build:js && npm run build:css",
+    "build:js": "node build.js",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
   }
 }
